--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=MinimalPeliculasAPI;User Id=sa;Password=sapsrvbbdd0192837465.;TrustServerCertificate=True;"
+
+    
+  },
+  "origenesPermitidos":"http://127.0.0.1:5500",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
